# health_control_center

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
src/health_control_chackra/: __about__.py  __init__.py  __main__.py
src/health_control_chackra/chart/: time_series_chart.py
src/health_control_chackra/dialog/: add_weight_dialog.py  configuration_dialog.py
src/health_control_chackra/domain/: configuration_repository.py  weight_repository.py
src/health_control_chackra/ui/: main_window.py
tests/chart/: test_time_series_chart.py
tests/domain/: test_configuration_repository.py  test_weight_repository.py
